style: 포맷팅 수정, toList() 수정